Fix spotlights breadcrumb vspacing

--- a/public/stylesheets/sass/spotlight_header.scss
+++ b/public/stylesheets/sass/spotlight_header.scss
@@ -11,3 +11,4 @@
 ul.breadcrumbC {
     margin-top : 10px;
 }
+hr#top_of_content.space { margin-top : -10px; }
